# xf86-input-wacom

./: .travis.yml  Makefile.am  autogen.sh  configure.ac
include/: isdv4.h  wacom-properties.h
man/: xsetwacom.man
src/: Makefile.am  wcmCommon.c  wcmConfig.c  wcmISDV4.c  wcmTouchFilter.c  wcmUSB.c  wcmValidateDevice.c  wcmXCommand.c  xf86Wacom.c  xf86WacomDefs.h
test/: Makefile.am  wacom-tests.c
tools/: Makefile.am  tools-shared.c  tools-shared.h  xsetwacom.c
